syntax = "proto3";

package com.pms.validation.proto;

option java_package = "com.pms.validation.proto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message InvalidTradeEventProto {
  string portfolioId = 1;
  string tradeId = 2;
  string symbol = 3;
  string side = 4;
  double pricePerStock = 5;
  int64 quantity = 6;
  google.protobuf.Timestamp timestamp = 7;
  string validationErrors = 8;
}
